# llm-daemon

./: .gitmodules  Cargo.toml  adhoc.py  note.md  requirements.txt
.cargo/: config.toml
.github/workflows/: CI.yml
bihyung/: Cargo.toml  README.md  langchain_example.py  pyproject.toml
bihyung/bihyung/: ggml-common.h  ggml-metal.metal  server
bihyung/src/: lib.rs
llama-cpp-low/: Cargo.toml  README.md  build.rs
llm-daemon/: CHANGELOG.md  Cargo.toml
llm-daemon/benches/: port_open.rs
llm-daemon/examples/: congest.rs  gpt-oss-20b.rs  langchain_llama.rs  llamafile_daemon.rs  qwen3-coder.rs  simple.rs  with_llama_curl.rs
llm-daemon/src/: daemon_trait.rs  lib.rs  proxy.rs  test_client.rs  util.rs
llm-daemon/src/llama_daemon/: daemon.rs  daemon2.rs  daemon3.rs  daemon_ext.rs  llamafile.rs  mod.rs
llm-daemon/src/mlc_daemon/: bootstrap.rs  daemon2.rs  mod.rs
neon-llm-daemon/: .gitignore  Cargo.toml  README.md  example.js  index.js  package.json  pnpm-lock.yaml
neon-llm-daemon/src/: lib.rs
node-llm-daemon/: .gitattributes  Cargo.toml  example.mjs  index.d.ts  index.js  package.json
node-llm-daemon/.github/workflows/: CI.yml
node-llm-daemon/__test__/: index.spec.ts
node-llm-daemon/artifacts/: server
node-llm-daemon/src/: lib.rs
