[workspace]
resolver = "2"
members = [ "llm-daemon", "bihyung", "llama-cpp-low", ]
default-members = [ "llm-daemon" ]

[workspace.package]
version = "0.5.9"
homepage = "https://github.com/blmarket/llm-daemon"
repository = "https://github.com/blmarket/llm-daemon"
edition = "2021"
authors = [ "blmarket@gmail.com" ]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
