[package]
name = "bihyung"
version.workspace = true
authors.workspace = true
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bihyung"
crate-type = ["cdylib"]

[dependencies]
llm-daemon = { path = "../llm-daemon" }
pyo3 = "0.25"
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
enum_dispatch = "0.3"
url = "2"
futures = "0.3"
