[package]
name = "neon-llm-daemon"
version = "0.1.0"
description = "Launch LLM daemon"
license = "GPL-3.0-only"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.1"
llm-daemon = { path = "../llm-daemon" }
