
[package]
authors = ["blmarket <blmarket@gmail.com>"]
edition = "2021"
name = "llm_daemon"
version = "0.7.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

[dependencies.llm-daemon]
path = "../llm-daemon"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
